refactor: rename Raker classes to Extractor across environment modules
Rename EnvironmentRaker to EnvironmentExtractor and TestCaseRaker to
SuiteTestExtractor for clarity. Consolidate duplicate annotation lookups
in SuiteTestExtractor.